added dragon 14 aout
added dragon 14 aout

--- a/index.html
+++ b/index.html
@@ -383,6 +383,42 @@ $(function() {
                                         </div>
                                     </div>
                                 </li> 
+                                   <li class="list-group-item">
+                                    <div class="row">
+                                        <div class="col-xs-12 col-md-2 date-jour-mois text-center">
+                                            <span class="pull-xs-right"><span class="date-jour">14</span>
+                                            <br><span class="date-mois">AOUT</span></span>
+                                        </div>
+                                        <div class="col-xs-12 col-md-6">
+                                            <p class="date">
+                                                <span class="date-lieu">Sévérac d'Aveyron</span> - <span class="date-date">lundi 14 août</span> à
+                                                <span class="date-heure">21h30</span>
+                                                <br>
+                                                <span class="date-lieu">Cité médiévale</span>&nbsp; &nbsp;<span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/LkPNLMEZrtt">Accès</a> - <a class="reservation" href="http://www.aveyron-tourisme.fr/Infospratiques/Contactetacc%C3%A8s/tabid/66/language/fr-FR/Default.aspx">Informations</a></span>
+                                            </p>
+                                        </div>
+                                        <div class="col-xs-12 col-md-4 text-center">
+                                            <span class="addtocalendar atc-style-blue" data-calendars="iCalendar, Google Calendar, Outlook">
+                                                <a class="atcb-link">Ajouter au calendrier</a>
+                                                <var class="atc_event">
+                                                <var class="atc_date_start">2017-08-14 21:30:00</var>
+                                                <var class="atc_date_end">2017-08-14 23:00:00</var>
+                                                <var class="atc_timezone">Europe/Paris</var>
+                                                <var class="atc_title">La Cité des Dragons</var>
+                                                <var class="atc_description">Spectacle total : marionnettes géantes, musique, théâtre, projections.
+
+                                                Vous  ne  le savez sans doute pas encore mais la cité abrite de drôles de personnages : il y a la Bestiole, il y a une magicienne et il y a les autres... qui vivent cachés. Il paraît que, dans la magie des ruelles, gît un dragon solitaire qui ne se laisse apercevoir que par qui veut bien y croire. Laissez-vous  guider  par  La  Bestiole  et  découvrez l’histoire folle des dragons de la cité de Sévérac. Une déambulation pleine de surprises qui vous fera voyager dans le temps et l’imaginaire. Magie et musique vous accompagneront tout le long de cette soirée fantastique dont vous vous souviendrez longtemps.
+
+                                                Prix libre
+                                                </var>
+                                                <var class="atc_location">Cité médiévale de Sévérac-le-Château</var>
+                                                <var class="atc_organizer">Compagnie Mesdames A</var>
+                                                <var class="atc_organizer_email">contact@tourisme-severaclechateau.fr</var>
+                                                </var>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </li> 
                                  <li class="list-group-item">
                                     <div class="row">
                                         <div class="col-xs-12 col-md-2 date-jour-mois text-center">
