--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ $(function() {
                                     <div class="row">
                                         <div class="col-xs-12 col-md-2 date-jour-mois text-center">
                                             <span class="pull-xs-right"><span class="date-jour">7</span>
-                                            <br><span class="date-mois">AOUT</span></span>
+                                            <br><span class="date-mois">AOÛT</span></span>
                                         </div>
                                         <div class="col-xs-12 col-md-6">
                                             <p class="date">
@@ -387,7 +387,7 @@ $(function() {
                                     <div class="row">
                                         <div class="col-xs-12 col-md-2 date-jour-mois text-center">
                                             <span class="pull-xs-right"><span class="date-jour">14</span>
-                                            <br><span class="date-mois">AOUT</span></span>
+                                            <br><span class="date-mois">AOÛT</span></span>
                                         </div>
                                         <div class="col-xs-12 col-md-6">
                                             <p class="date">
@@ -423,7 +423,7 @@ $(function() {
                                     <div class="row">
                                         <div class="col-xs-12 col-md-2 date-jour-mois text-center">
                                             <span class="pull-xs-right"><span class="date-jour">21</span>
-                                            <br><span class="date-mois">AOUT</span></span>
+                                            <br><span class="date-mois">AOÛT</span></span>
                                         </div>
                                         <div class="col-xs-12 col-md-6">
                                             <p class="date">
