--- a/index.html
+++ b/index.html
@@ -287,8 +287,8 @@ $(function() {
             <div class="row">
                 <div class="col-xs-10 col-xs-offset-1 col-lg-8 col-lg-offset-2">
                     <h1>Actualités et dates</h1>
-                    <p>La <i>Cité des Dragons</i> sera de retour en juillet et août 2017.<br>
-                    En attendant, la Compagnie travaille sur sa nouvelle création&nbsp;: <i>Éclairs</i> .
+                    <p><i>La Nouvelle Cité des Dragons</i> a conclu son été 2017 en beautée.<br>
+                    La Compagnie travaille désormais sur sa nouvelle création&nbsp;: <i>Éclairs</i> .
                     </p>
                  <div class="row">
                     <div class="col-xs-11 col-sm-9 col-md-8 col-lg-7">
@@ -300,10 +300,10 @@ $(function() {
 
                     <br>
 
-
-                    <h3>Dates 2017 pour la <i>La Cité des Dragons</i></h3>
+ <!-- liste dates -->
+                    <!--<h3>Dates 2017 pour la <i>La Cité des Dragons</i></h3>
                     <br>
-                    <!-- liste dates -->
+                   
                     <div class="row">
                         <div class="col-xs-12 col-md-10 col-md-offset-1">
                             <ul class="list-group prochaines-dates">
@@ -406,9 +406,9 @@ $(function() {
                                         </div>
                                     </div>
                                 </li>
-                            </ul>-->
+                            </ul>
                         </div>
-                    </div>
+                    </div>-->
                    
                 </div>
             </div>
