--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ $(function() {
             <div class="row">
                 <div class="col-xs-10 col-xs-offset-1 col-lg-8 col-lg-offset-2">
                     <h1>Actualités et dates</h1>
-                    <p><i>La Nouvelle Cité des Dragons</i> a conclu son été 2017 en beautée.<br>
+                    <p><i>La Nouvelle Cité des Dragons</i> a conclu son été 2017 en beauté.<br>
                     La Compagnie travaille désormais sur sa nouvelle création&nbsp;: <i>Éclairs</i> .
                     </p>
                  <div class="row">
