--- a/index.html
+++ b/index.html
@@ -222,13 +222,32 @@ $(function() {
                             <div class="button">
                                 <a class="btn btn-nous-soutenir center-block" type="button" data-toggle="modal" data-target="#modal-soutenir-adhesion">
                                     <span class="txt-nous-soutenir">Nous soutenir<br></span>
-                                    <span class="txt-nous-soutenir-small">(Info soutien &amp; adhésion)</span>
+                                    <span class="txt-nous-soutenir-small">(Soutien et adhésion)</span>
                                 </a>
                             </div>
                         </div>
+
+                       
+
                         <div id="modal-soutenir-adhesion" class="modal fade" role="dialog">
                             <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                        <h4 class="modal-title">Soutien et adhésion</h4>
+                                    </div>
+                                    <div class="modal-body">
+                                         <iframe id="haWidget" src="https://www.helloasso.com/associations/compagnie-mesdames-a/adhesions/adhesion-association-mesdames-a/widget" style="width:100%;height:750px;border:none;" onload="window.scroll(0, document.querySelector('iframe').offsetTop)"></iframe>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!--
+                        <div id="modal-soutenir-adhesion" class="modal fade" role="dialog">
+                            <div class="modal-dialog">-->
                                 <!-- Modal content-->
+                                <!--
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -248,6 +267,8 @@ $(function() {
                                 </div>
                             </div>
                         </div>
+                        -->
+                        
                     </div>
                 </div>
             </div>
