--- a/index.html
+++ b/index.html
@@ -309,11 +309,11 @@ $(function() {
                 <div class="col-xs-10 col-xs-offset-1 col-lg-8 col-lg-offset-2">
                     <h1>Actualités et dates</h1>
                     <p><i>La Nouvelle Cité des Dragons</i> revient em 2018.<br>
-                    La nouvelle création de la compagnie <i>Éclairs</i> avance et les premières présentations arrivent.
+                    La nouvelle création de la compagnie <i>Éclairs</i> avance et quelques premières étapes de travail seront présentées au public avant l'été.
                     </p>
                      
                     <!-- liste dates -->
-                    <h3>Représentation d'<i>Éclairs</i></h3>
+                    <h3><i>Éclairs</i>: étapes de travail</h3>
                     <br>
                     <div class="row">
                          <div class="col-xs-12 col-md-10 col-md-offset-1">
