--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ $(function() {
             <div class="row">
                 <div class="col-xs-10 col-xs-offset-1 col-lg-8 col-lg-offset-2">
                     <h1>Actualités et dates</h1>
-                    <p><i>La Nouvelle Cité des Dragons</i> revient em 2018.<br>
+                    <p><i>La Nouvelle Cité des Dragons</i> revient en 2018.<br>
                     La nouvelle création de la compagnie <i>Éclairs</i> avance et quelques premières étapes de travail seront présentées au public avant l'été.
                     </p>
                      
