date pre eclair remove
date pre eclair remove

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ $(function() {
                     </p>
                      
                     <!-- liste dates -->
-                    <h3><i>Éclairs</i>: étapes de travail</h3>
+                    <!--<h3><i>Éclairs</i>: étapes de travail</h3>
                     <br>
                     <div class="row">
                          <div class="col-xs-12 col-md-10 col-md-offset-1">
@@ -328,7 +328,7 @@ $(function() {
                                             <p class="date">
                                                 <span class="date-lieu">TOULOUSE</span> - <span class="date-date">samedi 12 mai</span> à <span class="date-heure">19h</span>
                                                 <br>
-                                                <span class="date-lieu">Les ateliers d'Eauvive</span>&nbsp; &nbsp;<span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/PZ6VvAcvyaR2">Accès</a> <!--- <a class="reservation" href="http://tickets.thecockpit.org.uk/Sales/Shows/Voila-2016/SPECTATEURS-un-accident-de-th%C3%A9%C3%A2tre#book">Réservations</a>--></span>
+                                                <span class="date-lieu">Les ateliers d'Eauvive</span>&nbsp; &nbsp;<span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/PZ6VvAcvyaR2">Accès</a> <a class="reservation" href="http://mesdames-a.fr/"></a></span>
                                             </p>
                                         </div>
                                         <div class="col-xs-12 col-md-4 text-center">
@@ -350,7 +350,7 @@ $(function() {
                                 </li>
                             </ul>
                         </div>
-                    </div>
+                    </div>-->
 
                     <h3>Dates 2018 pour la <i>La Nouvelle Cité des Dragons</i></h3>
                     <br>
