copy change actu
copy change actu

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ $(function() {
                 <div class="col-xs-10 col-xs-offset-1 col-lg-8 col-lg-offset-2">
                     <h1>Actualités et dates</h1>
                     <p><i>La Nouvelle Cité des Dragons</i> revient en 2018.<br>
-                    La nouvelle création de la compagnie <i>Éclairs</i> avance et quelques premières étapes de travail seront présentées au public avant l'été.
+                    La nouvelle création de la compagnie <i>Éclairs</i> avance et les premières étapes de travail ont été présentées au public avant l'été.
                     </p>
                      
                     <!-- liste dates -->
