logo partenaires updates

--- a/index.html
+++ b/index.html
@@ -242,32 +242,6 @@
                                 </div>
                             </div>
                         </div>
-
-                        <!--
-                        <div id="modal-soutenir-adhesion" class="modal fade" role="dialog">
-                            <div class="modal-dialog">-->
-                                <!-- Modal content-->
-                                <!--
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                        <h4 class="modal-title">Nous soutenir - Info &amp; adhésion</h4>
-                                    </div>
-                                    <div class="modal-body dates-passees">
-                                        <p class="reduction-dimpots">
-                                            Vous pouvez devenir membre de la compagnie et nous soutenir en utilisant le <b><a href="media/pdf/bulletin-adhesion-mesdames-a-2017-2018.pdf">bulletin d'adhésion</a></b>.<br>
-                                            Merci!
-                                            <br>
-                                            <br>
-                                            <small>
-                                            <i>Info</i>: Si vous êtes imposable, vos dons ouvrent droit à une réduction d'impôts.<br>
-                                            Par exemple&nbsp;: après impots, un don de 35€ revient à moins de 12€.<br>
-                                                </small></p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        -->
                         
                     </div>
                 </div>
@@ -2042,7 +2016,8 @@
             <p class="caption-partenaire">Aide à la résidence</p>
         </div>
         <div class="col-xs-6 col-sm-3">
-            <img src="media/images/partenaires/3-severac.jpg" alt="logo Severac" class="img-responsive logo-partner">
+            <img src="media/images/partenaires/3-severac-d-a.png" alt="logo Severac" class="img-responsive logo-partner">
+            <p class="caption-partenaire">Sévérac d'Aveyron</p>
         </div>
         <div class="clearfix visible-xs-block visible-sm-block visible-md-block visible-lg-block"></div>
         <div class="col-xs-6 col-sm-3">
@@ -2053,10 +2028,10 @@
         </div>
         <div class="clearfix visible-xs-block"></div>
         <div class="col-xs-6 col-sm-3">
-            <img src="media/images/partenaires/6-mixart.png" alt="logo Mixart Myris" class="img-responsive logo-partner">
+            <img src="media/images/partenaires/6-le-pari.jpg" alt="logo Le Pari" class="img-responsive logo-partner">
         </div>
         <div class="col-xs-6 col-sm-3">
-            <img src="media/images/partenaires/7-europe-jeunesse.jpg" alt="logo Juenesse en action" class="img-responsive logo-partner">
+            <img src="media/images/partenaires/7-dla.jpg" alt="logo DLA" class="img-responsive logo-partner">
         </div>
         <div class="clearfix visible-xs-block visible-sm-block visible-md-block visible-lg-block"></div>
         <div class="col-xs-6 col-sm-3">
