remove caca accroche

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             <div class="row">
                 <div class="col-xs-10 col-xs-offset-1 col-lg-8 col-lg-offset-2">
                     <h1>Actualités et dates</h1>
-                    <p>La nouvelle création de la compagnie <i>Éclairs</i> prépare la saison 2018/2019.</p>
+                    <!--<p>La nouvelle création de la compagnie <i>Éclairs</i> prépare la saison 2018/2019.</p>-->
                      
                     <!-- liste dates -->
                     <!--<h3><i>Éclairs</i>: étapes de travail</h3>
