--- a/index.html
+++ b/index.html
@@ -806,10 +806,11 @@
                     <div class="creations eclairs" id="eclairs">
                         <h2>ÉCLAIRS</h2>
                         <p><small>Saison 2018-2019</small></p>
-                        <img src="creations/eclairs/media/images/Cie_Mesdames_A_Dragons_2015_main.jpg" alt="La Cité des Dragons - Magicienne" class="img-responsive">
+                        <img src="creations/eclairs/media/images/affiche_sm.jpg" alt="ÉCLAIRS - Affiche" class="img-responsive">
                         <p><br>théâtre-concert-danse<br><br>
-                            ÉCLAIRS propose un écrin onirique dans lequel nous suivons la quête d’une jeune femme sur les pas de sa grand-mère, fantôme bienveillant. Elle y découvre sa lutte de femme libre et la folie douce de son grand-père... Car ÉCLAIRS, c’est aussi un concert, avec une dizaine de compositions originales interprétées en direct (guitare, contrebasse et chant). Notes et mots se répondant, s’opposant, se complétant afin de créer le deuxième pôle d'énergie nécessaire à cette décharge vitale tant recherchée par les personnages.<br><br>
-                            Le tout se déroulera dans un décor nébuleux traversé par la lumière de l’aurore en cours.<br>
+                            <i>ÉCLAIRS</i>, c'est la quête d’une jeune femme sur les pas de sa grand-mère, fantôme bienveillant. Notre protagoniste y découvre sa lutte de femme libre et la folie douce de son grand-père...<br>
+                            <i>ÉCLAIRS</i>, c’est aussi un concert, avec une dizaine de compositions originales interprétées en direct (guitare, contrebasse et chant). Notes et mots se répondent, s’opposent et se complètent afin de créer le deuxième pôle d'énergie nécessaire à cette décharge vitale tant recherchée par les personnages.<br><br>
+                            Le tout se déroule dans un écrin onirique, décor nébuleux traversé par la lumière de l’aurore en cours.<br>
                         </p>
                         <!--<h3>Galerie</h3>
                         <div id="galeclairs">
@@ -859,11 +860,11 @@
                             <p class="equip-crea">
                                 <span class="label-equipe-crea">Écriture, mise en scène &amp; costumes /</span> Alice Tabart
                                 <br>
-                                <span class="label-equipe-crea">Interprétation /</span> Elsa Sanchez, Coline Lubin, Alice Tabart
+                                <span class="label-equipe-crea">Interprétation /</span> Elsa Sanchez, Coline Lubin, Alice Tabart,...
                                 <br>
                                 <span class="label-equipe-crea">Création musicale /</span> ...
                                 <br>
-                                <span class="label-equipe-crea">Création vidéo, lumière et soutien technique /</span> Christian Vialaret
+                                <span class="label-equipe-crea">Création vidéo, lumière et soutien technique /</span> Christian Vialaret,...
                                 <br>
                                 <span class="label-equipe-crea">Stagiaires /</span> ...
                                 <br>
@@ -931,7 +932,7 @@
                                         <div class="modal-content">
                                             <div class="modal-header">
                                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                                <h4 class="modal-title">Dates passées - La Cité des Dragons</h4>
+                                                <h4 class="modal-title">Dates - <i>ÉCLAIRS</i></h4>
                                             </div>
                                             <div class="modal-body dates-passees">
                                                 <ul>
