--- a/index.html
+++ b/index.html
@@ -779,11 +779,17 @@
                             <p class="equip-crea">
                                 <span class="label-equipe-crea">Écriture, mise en scène &amp; costumes /</span> Alice Tabart
                                 <br>
-                                <span class="label-equipe-crea">Interprétation /</span> Elsa Sanchez, Coline Lubin, Alice Tabart,...
+                                <span class="label-equipe-crea">Interprétation /</span> Elsa Sanchez, Coline Lubin, Alice Tabart, Éric Leclerc, Aladin Chaboche (guitare), Jean-Marc Serpin (contrebasse)
                                 <br>
-                                <span class="label-equipe-crea">Création musicale /</span> ...
+                                <span class="label-equipe-crea">Composition /</span> Aladin Chaboche
                                 <br>
-                                <span class="label-equipe-crea">Création vidéo, lumière et soutien technique /</span> Christian Vialaret,...
+                                <span class="label-equipe-crea">Scénographie /</span> Claire Balerdi
+                                <br>
+                                <span class="label-equipe-crea">Création lumière /</span> Serena Andreasi
+                                <br>
+                                <span class="label-equipe-crea">Construction décor /</span> Emmanuel Borgetto
+                                <br>
+                                <span class="label-equipe-crea">Création vidéo et soutien technique /</span> Christian Vialaret
                                 <br>
                                 <span class="label-equipe-crea">Stagiaires /</span> ...
                                 <br>
