--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@
                                 <br>
                                 <ul class="production">
                                     <li>la <a data-toggle="modal" href="#revue-presse-eclairs-modal-lg">Revue de presse</a></li>
-                                    <li>la <a data-toggle="modal" href="#modal-dates-eclairs">liste des dates passées</a></li>
+                                    <li>la <a data-toggle="modal" href="#modal-dates-eclairs">liste des dates</a></li>
                                 </ul>
                                 <!--
                                 <div id="revue-presse-eclairs-modal-lg" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="RevueDePresse" aria-hidden="false">
