contact + fix adresse

--- a/index.html
+++ b/index.html
@@ -2073,19 +2073,20 @@
             <p>
                 <i class="fas fa-file-pdf">&nbsp;</i><a href="media/pdf/statuts1901-mesdames-a.pdf">Statuts (association - loi 1901)</a><br>
                 No&nbsp;licence&nbsp;entrepreneur&nbsp;:&nbsp;n°&nbsp;2-1107142&nbsp;<br>
-                No&nbsp;siret&nbsp;:&nbsp;539&nbsp;558&nbsp;304&nbsp;00017<br>  
+                No&nbsp;siret&nbsp;:&nbsp;539&nbsp;558&nbsp;304&nbsp;00017<br><br>
                 Siège<br>
-                <address>
-                    <p>Compagnie Mesdames A<br>
-                    17, rue Jean Pascal<br>
-                    31620 Labastide-Saint-Sernin, France</p>
-                </address>
-                Bureau<br>
-                <address>
-                    <p>6, rue Moquin Tandon<br>
-                    31500 Toulouse, France</p>
-                </address>
             </p>
+            <address>
+                <p>Compagnie Mesdames A<br>
+                17, rue Jean Pascal<br>
+                31620 Labastide-Saint-Sernin, France</p>
+            </address>
+            <p>Bureau</p>
+            <address>
+                <p>6, rue Moquin Tandon<br>
+                31500 Toulouse, France</p>
+            </address>
+            
 </div>
 </div>
 </div>
@@ -2101,7 +2102,7 @@
         -->
         <p> Vous pouvez nous contacter&nbsp;:<br></p>
     <ul class="production">
-    <li>par mail&nbsp;: &nbsp;&nbsp;<i class="fas fa-envelope" aria-hidden="true"></i>&nbsp;&nbsp;cie.mesdames.a&nbsp;{at}&nbsp;gmail.com <br>
+    <li>par mail&nbsp;:&nbsp;&nbsp;<i class="fas fa-envelope" aria-hidden="true"></i>&nbsp;&nbsp;cie.mesdames.a&nbsp;<i class="fas fa-at"></i>&nbsp;gmail.com <br>
     </li>
     <li>ou en utilisant le formulaire suivant&nbsp;:</li>
     <br>
